<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>br2_fsm_bumpgo_py</name>
  <version>0.2.0</version>
  <description>Bump and Go behavior based on Finite State Machines (Python)</description>
  <maintainer email="fmrico@gmail.com">fmrico</maintainer>
  <license>Apache License, Version 2.0</license>

  <depend>rclcpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
